--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 <body>
     <form action="">
         <input type="text" name="" id="">
+        <input type="text" name="" id="">
         <input type="button" value="">
     </form>
 </body>
